--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>My name is George Melek and I enjoy playing basketball and video games</h1>
+<h1>My name is George Melek and I enjoy playing basketball and video games<h1>
